# garmin-workout-buddy

./: .gitignore  CLAUDE.md  garmin_workout_uploader.py  pyproject.toml
src/garmin_workout_buddy/: __init__.py  __main__.py  auth.py  cli.py  formatters.py  server.py  service.py
workouts/: running_intervals.json  sunday_long_run_12km.json  swimming_drills.json
