[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-workout-buddy"
version = "0.1.0"
description = "Upload and manage structured workouts on Garmin Connect"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jordi VP" }
]
keywords = ["garmin", "workout", "fitness", "training"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
]
dependencies = [
    "garminconnect>=0.2.0",
]

[project.scripts]
garmin-workout = "garmin_workout_buddy.cli:main"

[project.urls]
Homepage = "https://github.com/jaguaar/garmin-workout-buddy"
Repository = "https://github.com/jaguaar/garmin-workout-buddy"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_workout_buddy"]
